--- a/views/seller/store_panel/add_my_store.erb
+++ b/views/seller/store_panel/add_my_store.erb
@@ -11,14 +11,6 @@
             <i class="fas fa-user me-1"></i>
         </div>
         <div class="card-body">
-            <% if @errors && @errors.any? %>
-                <% @errors.each do |error| %>
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <strong><%= error %></strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                <% end %>
-            <% end %>
             <form action="/add_my_store/<%= current_user['user_id'] %>" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
                     <input type="hidden" name="_method" value="post">
@@ -28,18 +20,33 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="store_name" name="store_name">
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Name')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Name')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="store_address" class="col-sm-2 col-form-label">Store Address</label>
                     <div class="col-sm-10">
                         <textarea type="text" class="form-control" id="store_address" name="store_address"></textarea>
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Address')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Address')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="cs_number" class="col-sm-2 col-form-label">Customer Service Number</label>
                     <div class="col-sm-10">
                         <input type="number" class="form-control" id="cs_number" name="cs_number">
                     </div>
+                    <% if @errors.any? { |e| e.include?('CS Number')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('CS Number')} %>
+                        </div>
+                    <% end %>
                 </div>
 
                 <div class="mb-3 row">
@@ -51,15 +58,30 @@
                             <option value="Inactive">Inactive</option>
                         </select>
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Status')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Status')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <div class="col-md-6">
                         <label for="store_photo" class="form-label" for="store_photo">Store Photo</label>
                         <input class="form-control" type="file" id="store_photo" name="store_photo">
+                        <% if @errors.any? { |e| e.include?('Store Photo')} %>
+                            <div class="form-text text-danger">
+                                <%= @errors.find { |e| e.include?('Store Photo')} %>
+                            </div>
+                        <% end %>
                     </div>
                     <div class="col-md-6">
                         <label for="store_banner" class="form-label" for="store_banner">Store Banner</label>
                         <input class="form-control" type="file" id="store_banner" name="store_banner">
+                        <% if @errors.any? { |e| e.include?('Store Banner')} %>
+                            <div class="form-text text-danger">
+                                <%= @errors.find { |e| e.include?('Store Banner')} %>
+                            </div>
+                        <% end %>
                     </div>
                 </div>
 
