--- a/views/seller/store_panel/edit_my_store.erb
+++ b/views/seller/store_panel/edit_my_store.erb
@@ -12,21 +12,6 @@
             Edit <%= @store['store_name'] %> Store
         </div>
         <div class="card-body">
-
-            <% if flash[:error] %>
-                <div class="alert alert-danger alert-dismissible fade show my-2" role="alert">
-                    <%= flash[:error] %>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            <% end %>
-
-            <% if flash[:success] %>
-                <div class="alert alert-success alert-dismissible fade show my-2" role="alert">
-                    <%= flash[:success] %>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            <% end %>
-
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Owner Name</label>
                 <div class="col-sm-10">
@@ -40,12 +25,33 @@
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="store_name" name="store_name" value="<%= @store['store_name'] %>">
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Name')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Name')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="store_address" class="col-sm-2 col-form-label">Store Address</label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" id="store_address" name="store_address" value="<%= @store['store_address'] %>">
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Address')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Address')} %>
+                        </div>
+                    <% end %>
+                </div>
+                <div class="mb-3 row">
+                    <label for="cs_number" class="col-sm-2 col-form-label">Customer Service Number</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="cs_number" name="cs_number" value="<%= @store['cs_number']%>">
+                    </div>
+                    <% if @errors.any? { |e| e.include?('CS Number')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('CS Number')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="store_status" class="col-sm-2 col-form-label">Store Status</label>
@@ -55,12 +61,11 @@
                             <option value="Inactive" <%= "selected" if @store['store_status'] == "Inactive" %>>Inactive</option>
                         </select>
                     </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="cs_number" class="col-sm-2 col-form-label">Customer Service Number</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="cs_number" name="cs_number" value="<%= @store['cs_number']%>">
-                    </div>
+                    <% if @errors.any? { |e| e.include?('Store Status')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Status')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="store_photo" class="col-sm-2 col-form-label">Store Photo</label>
@@ -74,6 +79,11 @@
                             <input class="form-control form-control-sm" id="store_photo" type="file" name="store_photo">
                         </div>
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Photo')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Photo')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <div class="mb-3 row">
                     <label for="store_banner" class="col-sm-2 col-form-label" for="photo">Store Banner</label>
@@ -87,6 +97,11 @@
                             <input id="store_banner" class="form-control form-control-sm" type="file" name="store_banner">
                         </div>
                     </div>
+                    <% if @errors.any? { |e| e.include?('Store Banner')} %>
+                        <div class="form-text text-danger">
+                            <%= @errors.find { |e| e.include?('Store Banner')} %>
+                        </div>
+                    <% end %>
                 </div>
                 <!-- Submit Button -->
                 <button type="submit" class="btn btn-outline-primary float-end">Save Changes</button>
