--- a/views/user/items/view_item.erb
+++ b/views/user/items/view_item.erb
@@ -1,42 +1,37 @@
 <div class="container mt-5">
     <div class="row mb-3">
-                <div class="col-md-3 mb-4">
-                    <div class="card">
-                        <% if item['item_photo'] && !item['item_photo'].empty? %>
-                            <img src="/uploads/items/<%= item['item_photo'] %>" class="card-img-top" alt="<%= item['item_name'] %>">
-                        <% else %>
-                            <img src="/img/question.png" class="card-img-top" alt="Default Item">
-                        <% end %>
-                        <div class="card-body">
-                            <p class="card-text">
-                                <%= item['item_name'] %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Brand:</strong> <%= item['item_brand'] %>
-                            </p>
-                            <p class="card-text">
-                                <%= item['item_description'] %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Price:</strong> <%= rupiah_currency(item['item_price']) %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Stock:</strong> <%= item['item_stock'] %>
-                            </p>
-                            <p class="card-text">
-                                <strong>Category:</strong> <%= item['item_category'] %>
-                            </p>
-                            <p class="catd-text">
-                                <strong>Unit:</strong> <%= item['item_unit'] %>
-                            </p>
-                            <a href="#" class="btn btn-outline-secondary float-start">Detail</a>
-                            <a href="#" class="btn btn-primary float-end">Checkout</a>
-                        </div>
-                    </div>
+        <div class="col-12 col-md-6 mb-4">
+            <div class="card">
+                <% if @item['item_photo'] && !@item['item_photo'].empty? %>
+                    <img src="/uploads/items/<%= @item['item_photo'] %>" class="card-img-top" alt="<%= @item['item_name'] %>">
+                <% else %>
+                    <img src="/img/question.png" class="card-img-top" alt="Default Item">
+                <% end %>
+                <div class="card-body">
+                    <p class="card-text">
+                        <%= @item['item_name'] %>
+                    </p>
+                    <p class="card-text">
+                        <strong>Brand:</strong> <%= @item['item_brand'] %>
+                    </p>
+                    <p class="card-text">
+                        <%= @item['item_description'] %>
+                    </p>
+                    <p class="card-text">
+                        <strong>Price:</strong> <%= rupiah_currency(@item['item_price']) %>
+                    </p>
+                    <p class="card-text">
+                        <strong>Stock:</strong> <%= @item['item_stock'] %>
+                    </p>
+                    <p class="card-text">
+                        <strong>Category:</strong> <%= @item['item_category'] %>
+                    </p>
+                    <p class="catd-text">
+                        <strong>Unit:</strong> <%= @item['item_unit'] %>
+                    </p>
+                    <a href="/" class="btn btn-primary float-start">Back</a>
                 </div>
-            <div class="col">
-                <div class="alert alert-info">No Active items available right now.</div>
             </div>
-        <% end %>
+        </div>
     </div>
 </div>
